Mejorar la configuración de seguridad en app.js, agregar nuevas tareas de prueba en package.json, optimizar la programación de respaldos en scheduler.js y mejorar la inicialización de Socket.IO en index.ejs con manejo de errores.

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "node app.js",
     "dev": "nodemon app.js",
     "test": "node test_system.js",
+    "test-scheduler": "node test_scheduler.js",
+    "test-web": "node test_web_interface.js",
     "install-simple": "node install_simple.js",
     "install-deps": "node install_dependencies.js"
   },
