Actualizar la estructura de las tablas en la base de datos. Se han renombrado columnas para mejorar la claridad y consistencia, cambiando 'rele_id' a 'releId' y 'is_active' a 'enabled'. Además, se han ajustado las consultas SQL en las funciones de guardado y recuperación para reflejar estos cambios. Se han añadido nuevos scripts en package.json para facilitar la migración de la base de datos.

--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "test": "node test_system.js",
     "test-scheduler": "node test_scheduler.js",
     "test-web": "node test_web_interface.js",
-    "install-simple": "node install_simple.js",
-    "install-deps": "node install_dependencies.js"
+    "test-dht11": "node test_dht11.js",
+    "test-relays": "node test_relays.js",
+    "install-simple": "node install_simple_final.js",
+    "install-deps": "node install_dependencies.js",
+    "migrate-db": "node migrate_database.js"
   },
   "keywords": [
     "hidroponía",
